--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": "14.x"
   },
   "scripts": {
-    "dev": "node index.mjs",
+    "start": "node index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
