--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,21 @@
 {
     "version": 2,
-    "builds":[
-        {
-            "src": "./index.mjs",
-            "use": "@vercel/node"
-        }
+    "builds": [
+      {
+        "src": "./index.mjs",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src" : "/(.*)",
-            "dest" : "/"
-        }
-    ]
-}
+      {
+        "src": "/(.*)",
+        "dest": "/"
+      }
+    ],
+    "functions": {
+      "api/*": {
+        "maxDuration": 30
+      }
+    }
+  }
+  
