--- a/vercel.json
+++ b/vercel.json
@@ -9,13 +9,8 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/"
+        "dest": "./index.mjs"
       }
-    ],
-    "functions": {
-      "api/*": {
-        "maxDuration": 30
-      }
-    }
+    ]
   }
   
