--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.mjs",
   "type": "module",
-  "engines": { "node": "18.x" },
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node index.mjs",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,6 +20,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "faiss-node": "^0.5.1",
+    "firebase": "^10.7.1",
     "langchain": "^0.0.212",
     "nodemon": "^3.0.2",
     "pickleparser": "^0.2.1",
